@@ -1,4 +1,12 @@
-2003-07-10  Fumitoshi UKAI  <ukai@ukai.org>
+2003-07-14  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03937] <center> in <table>
+	* table.c (feed_table_tag): fix <center>,</center>,<div>,</div>,
+				<p>,<br>,<nobr>,</nobr>,<wbr>
+			check_rowcol() for <img>
+	
+
+2003-07-10  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* w3mimg/fb/fb_img.h (get_image_size): add missing prototypes
 	* w3mimg/fb/fb.c (fb_clear): unused variable `j'
@@ -7916,4 +7924,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.849 2003/07/09 15:07:10 ukai Exp $
+$Id: ChangeLog,v 1.850 2003/07/13 16:13:28 ukai Exp $
